# LEPL1110

./: README.md
Devoir1/Integrate/src/: homework.c
Devoir2/GeoMesh/: boolean.msh  t16.msh  test.py  untitled.geo
Devoir2/GeoMesh/data/: mesh.txt
Devoir2/GeoMesh/src/: homework.c
Devoir3/Poisson/: fkqmlj.c
Devoir3/Poisson/src/: homework.c  main.c
Projet/: avion.geo  avion.msh  run.sh
Projet/GeoMesh/: CMakeLists.txt
Projet/GeoMesh/data/: mesh.txt
Projet/GeoMesh/src/: fem.c  homework.c  projet.c
Projet/Project/data/: UV.txt  avion.msh  mesh.msh  mesh.txt  problem.txt
Projet/Project/src/: README.md  fem.c  fem.h  homework.c  main.c
Projet/Project/src/data/: problem.txt
Projet/ProjectPostProcessor/: plot.py
Projet/ProjectPostProcessor/data/: UV.txt  mesh.txt
Projet/ProjectPostProcessor/src/: main.c
Projet/ProjectPreProcessor/: CMakeLists.txt
Projet/ProjectPreProcessor/data/: avion.msh  problem.txt
Projet/ProjectPreProcessor/src/: fem.c  main.c
Projet/data/: UV.txt  avion.geo  problem.txt
prep_to_send/Project/src/: README.txt  homework.c  main.c
prep_to_send/Project/src/data/: UV.txt
prep_to_send/ProjectPostProcessor/: CMakeLists.txt  plot.py
prep_to_send/ProjectPostProcessor/src/: main.c
prep_to_send/ProjectPreProcessor/src/: main.c
prep_to_send/Rapport/src/: rapport.tex
prep_to_send/test/: validate.py
savethings/: sv.txt
savethings/Projet/: copies.sh  validate.py
savethings/Projet/Project/data/: problem.txt
savethings/Projet/Project/src/: homework.c
savethings/Projet/ProjectPostProcessor/: plot.py
savethings/Projet/ProjectPreProcessor/src/: main.c
savethings/Projet/data/: problem.txt
